- Fixed bug #24897 (inconsistent behavior of shuffle() & array_multisort()).
  (Ilia, Jani)
- Fixed bug #24792 (--enable-zend-multibyte causes random segfaults with ZTS).
  (fujimoto)
- Fixed bug #24142 (workaround for a gcc bug affecting round()). (Marcus, Ilia)
- Fixed bug #24063 (serialize() missing 0 after the . on scientific notation).
  (Marcus, Ilia)
- Fixed bug #21957 (serialize() mangles objects with __sleep). (Ilia)

07 Aug 2003, Version 4.3.3RC3
- Fixed bug #24958 (Incorrect handling of 404s). (Ilia, Justin)
- Fixed bug #24936 (ext/fdf not linked properly as shared extension). (Jani)
- Fixed bug #24883 (variables_order and gpc_order being ignored). (Ilia)
- Fixed bug #24871 (methods misidentified as constructors). (Ilia)
- Fixed bug #24177 (Status not set correctly after flush() in Apache 2). (Ilia)
- Fixed bug #23509 (exit code lost when exit() called from 
  register_shutdown_function()). (Ilia)
- Fixed bug #23463 (added Dbase2 version check). (Vlad Krupin)
- Fixed bug #23104 (hash position of static arrays not being reset). (Ilia)
- Fixed bug #22154 (Possible crash when memory_limit is reached and
  output buffering in addition to session.use_trans_sid is used). (Ilia)
- Fixed bug #22072 (Apache2 sapis do not detect aborted connections). (Ilia)
- Fixed bug #21958 (workaround for unusual realpath() on AIX & Tru64). (Ilia)
- Fixed bug #21611 (version_compare() does not support "p" as suffix).
  (Stefan Walk)
- Fixed bug #18291 (escapeshellcmd() can now handle quoted arguments). (Ilia)
- Fixed bug #17414 (pthreads bug workaround). (timo.teras[at]iki.fi)

30 Jul 2003, Version 4.3.3RC2
- Improved the NSAPI SAPI module (Uwe Schindler)
  . Added possibility to use PHP to generate HTTP error pages (404 Not Found..)
  . Added possibility to use PHP to generate directory listings for directories
    without index.html
- Upgraded the bundled Expat library to version 1.95.6. (Jani)
- Upgraded the bundled PCRE library to version 4.3. (Andrei)